--- a/ex15.html
+++ b/ex15.html
@@ -8,20 +8,26 @@
         th,td{
             border: 1px solid;
         }
+        #cinza{
+            background-color: gray;
+        }
     </style>
 </head>
 <body>
     <table>
         <tr>
             <th>Funcionário</th>
-            <th>Salário</th>
-            <th>Banco</th>
-            <th>Departamento</th>
+        </tr>
+        <tr id = 'cinza'>
+            <td>Marcos</td>
         </tr>
         <tr>
-            <td>Marcos</td>
-            <br<td>Ana</td>
-            <td>João</td>
+            <td>Ana</td2>
+            </tr>
+            <tr id = 'cinza'>
+                <td>João</td>
+            </tr>
+        <tr>
             <td>Luana</td>
         </tr>
     </table>
